--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </section>
     <section id="your-review" class="your-review grid">
         <h1>your review</h1>
-        <form >
+        <form action="https://formspree.io/f/mzbydorn" method="POST" >
             <input type="text" placeholder="NAME">
             <textarea placeholder="your review" cols="30" rows="10"></textarea>
             <button class="button">SUBMIT</button>
