--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <section id="your-review" class="your-review grid">
         <h1>your review</h1>
         <form action="https://formspree.io/f/mzbydorn" method="POST" >
-            <input type="text" placeholder="NAME">
-            <textarea placeholder="your review" cols="30" rows="10"></textarea>
+            <input type="text" name="Name" placeholder="NAME">
+            <textarea name="messege" placeholder="your review" cols="30" rows="10"></textarea>
             <button class="button">SUBMIT</button>
 
         </form>
